--- a/src/components/CardItem/cardItem.css
+++ b/src/components/CardItem/cardItem.css
@@ -9,11 +9,12 @@
 	box-shadow: 0px 1px 5px var(--hover-color);
 	cursor: pointer;
 	transition: all 0.2s ease-in;
+	transform-style: preserve-3d;
+	will-change: transform;
 }
 .cardItemWrapper:hover {
 	box-shadow: 0 0 6px var(--hover-color);
 	transform: scale(1.01);
-	z-index: 6;
 }
 .cardItemWrapper:active {
 	transform: scale(0.95);
@@ -42,6 +43,7 @@
 	font-size: var(--defaultSize);
 	text-decoration: underline;
 	color: var(--main-color);
+	transition: text-shadow 0.3s ease;
 }
 .cardItemLink:hover {
 	text-shadow: 0 0 1px var(--hover-color);
