--- a/src/components/RightContentWrapper/rightContentWrapper.css
+++ b/src/components/RightContentWrapper/rightContentWrapper.css
@@ -6,8 +6,9 @@
 	grid-template-columns: 400px;
 	background-color: var(--main-color);
 }
-.rightContentHidden {
+.rightContent.rightContentHidden {
 	transform: translateX(350px);
+	box-shadow: none;
 }
 .rightMenuToggle {
 	display: none;
@@ -23,7 +24,8 @@
 	.rightContent {
 		position: absolute;
 		right: 0;
-		transition: transform 0.5s ease-in-out;
+		transition: transform 0.5s ease-in-out, box-shadow 0.3s ease;
+		box-shadow: 2px 0px 8px #1f1f1f;
 	}
 	.rightMenuToggle {
 		display: flex;
@@ -40,6 +42,7 @@
 		transition: transform 0.5s ease-in-out;
 		cursor: pointer;
 		border-radius: var(--border-mini-radius) 0 0 var(--border-mini-radius);
+		filter: drop-shadow(0px 0px 2px #1b5e96);
 	}
 	.rightMenuToggle img {
 		width: 30px;
