--- a/src/components/SearchForm/searchForm.css
+++ b/src/components/SearchForm/searchForm.css
@@ -2,10 +2,6 @@
 
 .searchWrapper {
 	position: relative;
-	transition: transform 0.2s ease-in;
-}
-.searchWrapper:active {
-	transform: scale(0.95);
 }
 .searchForm {
 	width: 100%;
